# todo-app

./: .gitignore  docker-compose.yml
backend-python-fastapi/: README.md  pyproject.toml
backend-python-fastapi/alembic/: env.py
backend-python-fastapi/alembic/versions/: 2023_10_03_2341-e12cd73b8928_initialize_tables.py
backend-python-fastapi/app/: __init__.py  api_models.py  config.py  database.py  db_models.py  db_queries.py  main.py  models.py  routes.py
backend-python-fastapi/app/old_routes/: todo.py  todo_list.py
backend-python-fastapi/app/routes/: todo.py  todo_list.py
frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  codecs.ts  main.tsx  state.ts  vite-env.d.ts
frontend/src/components/: SinglePropertyInput.tsx  Todo.tsx  TodoInput.tsx  TodoList.tsx
frontend/src/components/elements/: Button.tsx  ContextMenu.tsx  TextInput.tsx
frontend/src/components/primitive/: Button.tsx
