[tool.poetry]
name = "todo-app"
version = "1.0.0"
description = ""
authors = ["Valtteri Lakaniemi <valtteri.lakaniemi@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"

[tool.poetry.scripts]
start = "app.main:start"
dev = "app.main:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
