[tool.poetry]
name = "todo-app"
version = "1.0.0"
description = ""
authors = ["Valtteri Lakaniemi <valtteri.lakaniemi@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"

[tool.poetry.scripts]
start = "app:start"
dev = "app:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
